# gravity.yaml

./: .gitignore  database.sql  gravityyaml.py  pyproject.toml
.reuse/: dep5
gravityyaml/: cli.py  database.py  database.sql  gravityyaml.py
